--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
