--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "firebase": "^9.6.1",
     "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
