--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-slick": "^0.28.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
