--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./backend/index.js",
+    "start": "node ./src/index.js",
     "build": "cd ./client && npm install && npm run build"
     
   },
