--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "client": "cd client && npm start",
+    "backend": "nodemon index.js",
     "build": "cd ./client && npm install && npm run build"
     
   },
