--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "cd client && npm start",
+    "client": "cd ../client && npm start",
     "backend": "nodemon index.js",
-    "build": "cd ./client && npm install && npm run build"
+    "build": "cd ../client && npm install && npm run build"
     
   },
   "keywords": [],
