--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
-    
   },
   "keywords": [],
   "author": "",
@@ -18,7 +17,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
-    "multer": "^1.4.4",
+    "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "concurrently": "^6.4.0",
     "nodemon": "^2.0.15"
   }
 }
