--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fullstack ecommerce website for selling music.",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd client && npm start\" "
+    "dev": "concurrently \"cd backend && npm run dev\" \"cd client && npm run build && npm start\" "
     
   },
   "repository": {
