--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "cd client && npm install && npm run build"
-
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
