--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\" ",
-    "build": "cd client && npm install && npm run build"
+    "build": "concurrently \"cd backend && npm i\" \"cd client && npm i && npm run build\" "
   },
   "repository": {
     "type": "git",
