--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "14.17.5"
   },
   "scripts": {
-    "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\" ",
+    "start": "concurrently \"cd backend && npm i && npm start\" \"cd client && npm i && npm start\" ",
     "build": "cd client && npm install && npm run build"
   },
   "repository": {
