--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://admin:admin@cluster0.04tn4.mongodb.net/Madking_Shop?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://admin:admin123@cluster0.04tn4.mongodb.net/Madking_Shop?retryWrites=true&w=majority
