--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URL = mongodb+srv://admin:admin123@cluster0.04tn4.mongodb.net/Madking_Shop?retryWrites=true&w=majority
+PASS_SECRET_KEY = 
+JWT_SECRET_KEY = 
