--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "concurrently \"npm run start\" \" cd client && npm start\""
+
+    
   },
   "keywords": [],
   "author": "",
