--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "start": "node index.js",
-    "dev": "concurrently \"npm run start\" \" cd client && npm start\""
+    "heroku-postbuild": "cd ./client && npm install && npm run build",
+    "start": "node ./index.js",
+    "dev": "concurrently \"npm run start\" \" cd ./client && npm start\""
 
     
   },
