--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "heroku-postbuild": "cd ./client && npm install && npm run build",
     "start": "node ./index.js",
     "dev": "concurrently \"npm run start\" \" cd ./client && npm start\""
-
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
