--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.17.5",
+    "npm": "8.1.2"
+  },
   "scripts": {
     "heroku-postbuild": "cd ./client && npm install && npm run build",
     "start": "node ./index.js",
