--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "cypress": "^9.1.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "firebase": "^9.6.1",
     "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
