--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -15,6 +15,8 @@ jobs:
 
     # Steps in job
     steps:
+      - name: Go to Client
+        run: cd client
       # Get code from repo
       - name: Checkout code
         uses: actions/checkout@v1
