Updated dev - pipeline yaml

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -16,7 +16,8 @@ jobs:
     # Steps in job
     steps:
       - name: Go to Client
-        run: cd client
+        run: | 
+        cd client
       # Get code from repo
       - name: Checkout code
         uses: actions/checkout@v1
