--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -20,8 +20,10 @@ jobs:
         uses: actions/checkout@v1
       # Go to client 
       - name: Go to Client
+        working-directory: src/client
         run: |
-        cd client
+          ls -la
+
       # Install NodeJS
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
